<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextTextEmailAddres1"
        android:layout_width="286dp"
        android:layout_height="45dp"
        android:ems="10"
        android:gravity="start"
        android:inputType="textEmailAddress"
        android:text="@string/enter_your_email_here"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="320dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okay"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="446dp"
        android:background="@drawable/my_shape"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="554dp"
        android:background="@drawable/my_shape"
            />

    <EditText
        android:layout_width="107dp"
        android:layout_height="99dp"
        android:background="@drawable/ic_baseline_person_24"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="167dp"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="412dp"
        android:layout_height="35dp"
        android:layout_marginHorizontal="40dp"
        android:background="@color/purple_500"
        android:text="@string/midtermbtueasy"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="wrap_content">
        />

    </TextView/>