<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">
    <TextView
        android:id="@+id/textView"
        android:layout_width="412dp"
        android:layout_height="35dp"
        android:layout_marginHorizontal="40dp"
        android:background="@color/purple_500"
        android:text="@string/midtermbtueasy"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="wrap_content">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user14523_gmail_com"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="216dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="189dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="173dp"
        android:layout_height="145dp"
        android:background="@drawable/my_shape1"
        android:text="0"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="346dp"
        />




    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="click button to decrase number"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="502dp" />


</androidx.constraintlayout.widget.ConstraintLayout>